--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="text">
         <h2>
           Selamat Hari Raya Idhul Fitri, 1442 H<br /><span
-            >Minal Aidin Wal Faizin</span
+            >Rafli Sekeluarga, mengucapkan. Minal Aidin Wal Faizin</span
           >
         </h2>
       </div>
